SERVER-5064 don't return false in auth unless all config servers are down

written by greg